--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -61,6 +61,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+
+    <ImageView
+        android:id="@+id/thumnail"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:paddingVertical="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/chatRecyclerview"
+        app:layout_constraintEnd_toEndOf="@+id/chatRecyclerview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="#838282" />
+
     <LinearLayout
         android:id="@+id/popupIcons"
         android:layout_width="match_parent"
