--- a/app/src/main/res/layout/item_send.xml
+++ b/app/src/main/res/layout/item_send.xml
@@ -14,14 +14,16 @@
         android:layout_marginRight="5dp"
         android:background="@drawable/sent_drawable"
         android:orientation="vertical"
+        android:padding="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <ImageView
             android:id="@+id/image"
-            android:layout_width="200dp"
-            android:layout_height="130dp"
-            android:layout_margin="5dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_margin="2dp"
             android:scaleType="centerCrop"
             android:visibility="gone"
             app:srcCompat="@drawable/loadingimage" />
@@ -38,7 +40,30 @@
             android:paddingBottom="2dp"
             android:text="TextView"
             android:textColor="#FFFFFF"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/sent_drawable"
+        android:orientation="vertical"
+        android:padding="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.exoplayer2.ui.StyledPlayerView
+            android:id="@+id/idExoPlayerVIew"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:visibility="gone"
+            app:resize_mode="fill" />
+
     </LinearLayout>
 
     <ImageView
